--- a/frontend/mam-frontend/src/App.css
+++ b/frontend/mam-frontend/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('Roboto-Regular.ttf') format('ttf');
+}
+
 /*
 * =======================================
 * Resets
@@ -8,7 +13,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 /* Remove default padding */
@@ -33,6 +39,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 /* Set core body defaults */
@@ -92,33 +99,66 @@ select {
   align-items: stretch;
   justify-content: stretch;
   align-content: stretch;
-  grid-template-columns: 20vw 80vw;
-  grid-template-rows: 10vh 10vh 1fr 10vh;
+  grid-template-columns: 10vw 70vw 20vw;
+  grid-template-rows: 7vh 1fr 10vh;
+  overflow: hidden;
 }
 
 .app-header {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 3;
   grid-row: 1 / span 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .app-nav {
-  grid-column: 1 / span 2;
-  grid-row: 2 / span 1;
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 2;
 }
 
 .app-content {
-  grid-column: 2 / span 1;
-  grid-row: 3 / span 1;
+  grid-column: 2 / span 2;
+  grid-row: 2 / span 1;
+  display: grid;
+  justify-items: stretch;
+  align-items: stretch;
+  justify-content: stretch;
+  align-content: stretch;
+  grid-template-columns: 1fr;
+  grid-template-rows: 7vh 1fr;
+}
+
+.app-content-menu {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app-content-inner {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .app-aside {
-  grid-column: 1 / span 1;
-  grid-row: 3 / span 1;
+  grid-column: 3 / span 1;
+  grid-row: 2 / span 2;
 }
 
 .app-footer {
-  grid-column: 1 / span 2;
-  grid-row: 4 / span 1;
+  grid-column: 2 / span 2;
+  grid-row: 3 / span 1;
 }
 
 
@@ -128,6 +168,22 @@ select {
 * ---------------------------------------
 */
 
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+}
+
+h3, th {
+  font-size: 1rem;
+}
+
+p, span, ul, ol, td {
+  font-size: 0.8rem;
+}
+
 
 
 /*
@@ -135,6 +191,55 @@ select {
 * ---------------------------------------
 */
 
-.app-header, .app-nav, .app-content, .app-footer, .app-aside {
-  border: solid 1px red;
+.app-header, .app-nav, .app-content, .app-footer {
+  overflow: hidden;
+  z-index: 1;
+}
+
+.app-header {
+  background: #000;
+  color: #fff;
+  padding-left: 1rem;
+}
+
+.app-nav {
+  background: #414042;
+  color: #fff;
+  padding-left: 1rem;
+}
+
+.app-content-menu {
+  background: #fff;
+  border-bottom: 1px solid #bbb;
+  width: 98%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  z-index: 2;
+}
+
+.app-content-outer {
+  background: #eee;
+  padding: 1rem;
+}
+
+.app-content-inner {
+  background: #fff;
+  box-shadow: 2px 2px 2px #9c9c9c;
+  width: 98%;
+  z-index: 2;
+}
+
+.app-aside {
+  background: #414042;
+  color: #fff;
+  display: none;
+  top: 5vh;
+  right: 0;
+  z-index: 3;
+}
+
+.grid-image {
+  width: 15vw;
+  box-shadow: 2px 2px 2px #9c9c9c;
+  margin-top: 0.5rem;
 }
