--- a/frontend/mam-frontend/src/App.css
+++ b/frontend/mam-frontend/src/App.css
@@ -179,8 +179,26 @@ p, span, ul, ol, td {
   font-size: 0.8rem;
 }
 
+a {
+  background-color: white;
+  color: black;
+  font-size: 1.0rem;
+  font: inherit;
+  margin: 0px;
+}
 
-
+#div1, #div2 {
+  position: absolute;
+  width: 400px;
+  }
+  #div1 {
+  left: 0;
+  bottom: 400px;
+  }
+  #div2 {
+  left: 100px;
+  bottom: 400px;
+  }
 /*
 * Classes
 * ---------------------------------------
