--- a/frontend/mam-frontend/src/Sidebar.css
+++ b/frontend/mam-frontend/src/Sidebar.css
@@ -10,8 +10,6 @@
 .sidebar
 {
     display: flex;
-    
-    
 }
 .new
 {
@@ -46,16 +44,18 @@
     padding: 5px 18px;
     cursor: pointer;
     flex-direction: column;
+    margin-bottom: 1rem;
 }
 .header__option:hover{
     background-color: grey;
     align-items: center;
-    padding: 5px 30px;
+    padding: 5px 18px;
     border-bottom: none;
 }
 h3
 {
 color: white;
+font-size: 1rem;
 }
 .header__left{
     display: flex;
